--- a/latex/07-conclusion.tex
+++ b/latex/07-conclusion.tex
@@ -1,2 +1,3 @@
 \section{Conclusion}
-\textbf{TODO: Finish this section.}
+This work evaluated the impact of CycleGAN-based data augmentation of pulmonary nodule detection using YOLO11. Across four controlled experimental settings, detection performance remained largely unchanged with minor changes across settings. \\
+These findings suggest that CycleGAN-based augmentation provides limited benefit for object detection in chest CT scans and that GAN-based augmentation strategies effective for classification and segmentation tasks may not transfer to object detection tasks.
