--- a/latex/01-introduction.tex
+++ b/latex/01-introduction.tex
@@ -1,15 +1,15 @@
-\section{Introduction} % Cumi
-Object detection in computed tomography (CT) plays a crucial role in reinforcing diagnostic accuracy and clinical decision-making. In the last few years, deep learning-based object detection frameworks like \textbf{You Only Look Once (YOLO)} have shown solid performance in many imaging tasks because of their efficiency and real-time detection capabilities \cite{yolo11}\cite{yoloreview}. However, object detection models, especially in sensitive fields like medical imaging, often face the problem of having too little usable labeled data, or it is very difficult to access such data due to privacy regulations, costs, and other restrictions. As a result, models trained on small or unbalanced datasets tend to overfit and perform poorly when generalizing to new test data. To address this issue, we make use of \textbf{Generative Adversarial Networks (GANs)}, introduced by Goodfellow et al. \cite{goodfellow2014gan}, which can generate synthetic data to improve model training. Researchers such as Frid-Adar and Sandfort have shown that GAN-based augmentation can significantly improve classification and segmentation performance in CT-imaging\cite{frid2018gan}\cite{sandfort2019data}. CycleGAN-based augmentation has also been applied to YOLO-based multi-organ detection in CT scans \cite{cycleganeaugmentation}. 
-\subsection{Novelty \& Contributions} % Cumi
-This work aims to analyze the effectiveness of GAN-based data augmentation in medical object detection. The novelty of this work lies in a comparative approach, analyzing the performance differences between object detection models trained on original datasets and those trained on datasets augmented with GAN-generated CT images. The expected contributions of this work include:
+\section{Introduction}
+Object detection in computed tomography (CT) plays a crucial role in reinforcing diagnostic accuracy and clinical decision-making. In the last few years, deep learning-based object detection frameworks like You Only Look Once (YOLO) have shown solid performance in many imaging tasks because of their efficiency and real-time detection capabilities \cite{yolo11,yoloreview}. However, object detection models, especially in sensitive fields like medical imaging, often face the problem of having too little usable labeled data, or it is very difficult to access such data due to privacy constraints, acquisition costs, and annotation burden. As a result, models trained on small or unbalanced datasets tend to overfit and perform poorly when generalizing to unseen data. \\
+To mitigate data scarcity, Generative Adversarial Networks (GANs) \cite{goodfellow2014gan} have been used to synthesize realistic images for augmentation. Prior studies report notable gains in classification and segmentation when augmenting CT data with GAN-generated images \cite{frid2018gan,sandfort2019data}. In contrast, the benefit in object detection remains uncertain: CycleGAN-based augmentation applied to YOLO for multi-organ CT detection has yielded mixed findings \cite{cycleganeaugmentation}. This motivates an investigation of GAN-based augmentation for pulmonary nodule detection in CT. 
+
+\subsection{Novelty \& Contributions}
+Despite promising results of GAN augmentation in medical classification and segmentation, its effectiveness for CT-based object detection has not been clearly established. This paper provides a controlled, comparative evaluation of CycleGAN-augmented training for YOLO-based nodule detection under limited real training data. Our contributions are:
 \begin{itemize}
-\item[--] Empirical evaluation of GAN-based augmentation for medical object detection model performance.
-
-\item[--] Quantitative comparison between baseline training, classical augmentation, GAN-based augmentation and their combination using standard object detection metrics.
-
-\item[--] Insights into the limitations of GAN-based augmentation for medical object detection.
-
+  \item Empirical assessment of GAN-based augmentation specifically for medical object detection in CT.
+  \item A quantitative comparison across four training settings (baseline, classical augmentation, baseline + CycleGAN, classical augmentation + CycleGAN) under identical hyperparameters, reported with AP@0.5, AP@0.5:0.95, mAP, and Mean IoU.
+  \item Insights into the limitations of CycleGAN-based augmentation for medical object detection.
 \end{itemize}
-\subsection{Research Question} % Tobi
-This work addresses the following question: \\
+
+\subsection{Research Question}
+Based on the problems described above, the central research question of this work is: \\
 \textbf{Do CycleGAN-generated chest CT images improve pulmonary nodule detection accuracy when real training data is limited?}
