--- a/latex/main.tex
+++ b/latex/main.tex
@@ -3,8 +3,11 @@
 % Version 2.21 of 2022/01/12
 %
 \documentclass[runningheads]{llncs}
-%
 \usepackage[T1]{fontenc}
+\usepackage{lmodern}
+\usepackage{url}
+\usepackage[hidelinks]{hyperref}
+%
 % T1 fonts will be used to generate the final print and online PDFs,
 % so please use T1 fonts in your manuscript whenever possible.
 % Other font encondings may result in incorrect characters.
@@ -58,17 +61,17 @@ Overall, our findings indicate that GAN-based augmentation strategies effective 
 % ------------------------------------------------------------
 \input{01-introduction}
 % ------------------------------------------------------------
-\input{02-related-work}
-% ------------------------------------------------------------
-\input{03-methodology}
-% ------------------------------------------------------------
-\input{04-results}
-% ------------------------------------------------------------
-\input{05-discussion}
-% ------------------------------------------------------------
-\input{06-limitations}
-% ------------------------------------------------------------
-\input{07-conclusion}
+% \input{02-related-work}
+% % ------------------------------------------------------------
+% \input{03-methodology}
+% % ------------------------------------------------------------
+% \input{04-results}
+% % ------------------------------------------------------------
+% \input{05-discussion}
+% % ------------------------------------------------------------
+% \input{06-limitations}
+% % ------------------------------------------------------------
+% \input{07-conclusion}
 %
 % ---- Bibliography ----
 %
