--- a/latex/references.bib
+++ b/latex/references.bib
@@ -1,151 +1,226 @@
-@inproceedings{gan,
- author = {Goodfellow, Ian J. and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
- booktitle = {Advances in Neural Information Processing Systems},
- editor = {Z. Ghahramani and M. Welling and C. Cortes and N. Lawrence and K.Q. Weinberger},
- pages = {},
- publisher = {Curran Associates, Inc.},
- title = {Generative Adversarial Nets},
- url = {https://proceedings.neurips.cc/paper_files/paper/2014/file/f033ed80deb0234979a61f95710dbe25-Paper.pdf},
- volume = {27},
- year = {2014}
+@inproceedings{goodfellow2014gan,
+  author = {Goodfellow, Ian J. and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  title = {Generative Adversarial Nets},
+  booktitle = {Advances in Neural Information Processing Systems},
+  volume = {27},
+  year = {2014},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2014/file/f033ed80deb0234979a61f95710dbe25-Paper.pdf},
+  publisher = {Curran Associates, Inc.}
 }
 
 @article{frid2018gan,
-  title={GAN-based synthetic medical image augmentation for increased CNN performance in liver lesion classification},
-  author={Frid-Adar, Maayan and Diamant, Idit and Klang, Eyal and Amitai, Michal and Goldberger, Jacob and Greenspan, Hayit},
-  journal={Neurocomputing},
-  volume={321},
-  pages={321--331},
-  year={2018},
-  publisher={Elsevier}
+  title = {GAN-based synthetic medical image augmentation for increased CNN performance in liver lesion classification},
+  author = {Frid-Adar, Maayan and Diamant, Idit and Klang, Eyal and Amitai, Michal and Goldberger, Jacob and Greenspan, Hayit},
+  journal = {Neurocomputing},
+  volume = {321},
+  pages = {321--331},
+  year = {2018},
+  publisher = {Elsevier}
 }
 
-@article{singh2021medical,
-  title={Medical image generation using generative adversarial networks: A review},
-  author={Singh, Nripendra Kumar and Raza, Khalid},
-  journal={Health informatics: A computational perspective in healthcare},
-  pages={77--96},
-  year={2021},
-  publisher={Springer}
+@inproceedings{zhu2017cyclegan,
+  author = {Zhu, Jun-Yan and Park, Taesung and Isola, Phillip and Efros, Alexei A.},
+  title = {Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks},
+  booktitle = {IEEE International Conference on Computer Vision (ICCV)},
+  year = {2017},
+  pages = {2223--2232},
+  doi = {10.1109/ICCV.2017.244},
+  url = {https://openaccess.thecvf.com/content_iccv_2017/html/Zhu_Unpaired_Image-to-Image_Translation_ICCV_2017_paper.html}
 }
 
-@INPROCEEDINGS{cycleganeaugmentation,
-  author={Hammami, Maryam and Friboulet, Denis and Kechichian, Razmig},
-  booktitle={2020 IEEE International Conference on Image Processing (ICIP)}, 
-  title={Cycle GAN-Based Data Augmentation For Multi-Organ Detection In CT Images Via Yolo}, 
-  year={2020},
-  volume={},
-  number={},
-  pages={390-393},
-  keywords={Computed tomography;Three-dimensional displays;Magnetic resonance imaging;Detectors;Biomedical imaging;Two dimensional displays;Image generation;multi-organ detection;image synthesis;data augmentation;medical imaging},
-  doi={10.1109/ICIP40778.2020.9191127}}
-
-@article{sandfort2019data,
-  title={Data augmentation using generative adversarial networks (CycleGAN) to improve generalizability in CT segmentation tasks},
-  author={Sandfort, Veit and Yan, Ke and Pickhardt, Perry J and Summers, Ronald M},
-  journal={Scientific reports},
-  volume={9},
-  number={1},
-  pages={16884},
-  year={2019},
-  publisher={Nature Publishing Group UK London}
+@article{ragab2024yoloreview,
+  author = {Ragab, Mohammed Gamal and Abdulkadir, Said Jadid and Muneer, Amgad and Alqushaibi, Alawi and Sumiea, Ebrahim Hamid and Qureshi, Rizwan and Al-Selwi, Safwan Mahmood and Alhussian, Hitham},
+  title = {A Comprehensive Systematic Review of YOLO for Medical Object Detection (2018 to 2023)},
+  journal = {IEEE Access},
+  year = {2024},
+  volume = {12},
+  pages = {57815--57836},
+  doi = {10.1109/ACCESS.2024.3386826}
 }
 
-@article{luna16,
-  title={Validation, comparison, and combination of algorithms for automatic detection of pulmonary nodules in computed tomography images: the LUNA16 challenge},
-  author={Setio, Arnaud Arindra Adiyoso and Traverso, Alberto and De Bel, Thomas and Berens, Moira SN and Van Den Bogaard, Cas and Cerello, Piergiorgio and Chen, Hao and Dou, Qi and Fantacci, Maria Evelina and Geurts, Bram and others},
-  journal={Medical image analysis},
-  volume={42},
-  pages={1--13},
-  year={2017},
-  publisher={Elsevier}
+@article{setio2017luna16,
+  author = {Setio, Arnaud A. A. and Traverso, Alberto and De Bel, Thomas and Berens, Moira S. N. and Van Den Bogaard, Cas and Cerello, Piergiorgio and Chen, Hao and Dou, Qi and Fantacci, Maria Evelina and Geurts, Bram and others},
+  title = {Validation, comparison, and combination of algorithms for automatic detection of pulmonary nodules in computed tomography images: the LUNA16 challenge},
+  journal = {Medical Image Analysis},
+  year = {2017},
+  volume = {42},
+  pages = {1--13},
+  doi = {10.1016/j.media.2017.06.015}
 }
 
-@misc{zhu2020unpairedimagetoimagetranslationusing,
-      title={Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks}, 
-      author={Jun-Yan Zhu and Taesung Park and Phillip Isola and Alexei A. Efros},
-      year={2020},
-      eprint={1703.10593},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/1703.10593}, 
+@article{sandfort2019cycleganCT,
+  author = {Sandfort, Veit and Yan, Ke and Pickhardt, Perry J. and Summers, Ronald M.},
+  title = {Data augmentation using generative adversarial networks (CycleGAN) to improve generalizability in CT segmentation tasks},
+  journal = {Scientific Reports},
+  year = {2019},
+  volume = {9},
+  number = {1},
+  pages = {16884},
+  doi = {10.1038/s41598-019-52737-x}
 }
 
-@ARTICLE{yoloreview,
-  author={Ragab, Mohammed Gamal and Abdulkadir, Said Jadid and Muneer, Amgad and Alqushaibi, Alawi and Sumiea, Ebrahim Hamid and Qureshi, Rizwan and Al-Selwi, Safwan Mahmood and Alhussian, Hitham},
-  journal={IEEE Access}, 
-  title={A Comprehensive Systematic Review of YOLO for Medical Object Detection (2018 to 2023)}, 
-  year={2024},
-  volume={12},
-  number={},
-  pages={57815-57836},
-  keywords={YOLO;Real-time systems;Medical services;Feature extraction;Reviews;Artificial intelligence;Deep learning;Object detection;Biomedical imaging;Surgery;YOLO;healthcare applications;artificial intelligence;medical object detection;medical imaging;systematic review},
-  doi={10.1109/ACCESS.2024.3386826}
-}
-
-@misc{yolo11,
-      title={YOLOv11: An Overview of the Key Architectural Enhancements}, 
-      author={Rahima Khanam and Muhammad Hussain},
-      year={2024},
-      eprint={2410.17725},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2410.17725}, 
-}
-
-@INPROCEEDINGS{odmetrics,
-  author={Padilla, Rafael and Netto, Sergio L. and da Silva, Eduardo A. B.},
-  booktitle={2020 International Conference on Systems, Signals and Image Processing (IWSSIP)}, 
-  title={A Survey on Performance Metrics for Object-Detection Algorithms}, 
-  year={2020},
-  volume={},
-  number={},
-  pages={237-242},
-  keywords={Measurement;Object detection;Detectors;Interpolation;Tools;Benchmark testing;Standards;object-detection metrics;average precision;object-detection challenges;bounding boxes},
-  doi={10.1109/IWSSIP48289.2020.9145130}
-  }
-
-@article{albuquerque2025deep,
-  title={Deep learning-based object detection algorithms in medical imaging: Systematic review},
-  author={Albuquerque, Carina and Henriques, Roberto and Castelli, Mauro},
-  journal={Heliyon},
-  volume={11},
-  number={1},
-  year={2025},
-  publisher={Elsevier}
-}
-
-@article{yang2021artificial,
-  title={Artificial convolutional neural network in object detection and semantic segmentation for medical imaging analysis},
-  author={Yang, Ruixin and Yu, Yingyan},
-  journal={Frontiers in oncology},
-  volume={11},
-  pages={638182},
-  year={2021},
-  publisher={Frontiers Media SA}
-}
-
-@inproceedings{goodfellow2014gan,
-  author = {Goodfellow, Ian J. and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
-  booktitle = {Advances in Neural Information Processing Systems},
-  title = {Generative adversarial Nets},
-  volume = {27},
-  year = {2014}
+@inproceedings{hammami2020cyclegan,
+  author = {Hammami, Maryam and Friboulet, Denis and Kechichian, Razmig},
+  title = {CycleGAN-Based Data Augmentation for Multi-Organ Detection in CT Images via YOLO},
+  booktitle = {IEEE International Conference on Image Processing (ICIP)},
+  year = {2020},
+  pages = {390--393},
+  doi = {10.1109/ICIP40778.2020.9191127},
+  keywords = {Image generation, multi-organ detection, image synthesis, data augmentation, medical imaging}
 }
 
 @article{covid2022gan,
-author="Ali, Hazrat
-and Shah, Zubair",
-title="Combating COVID-19 Using Generative Adversarial Networks and Artificial Intelligence for Medical Images: Scoping Review",
-journal="JMIR Med Inform",
-year="2022",
-month="Jun",
-day="29",
-volume="10",
-number="6",
-pages="e37365",
-keywords="augmentation; artificial intelligence; COVID-19; diagnosis; generative adversarial networks; diagnostic; lung image; imaging; data augmentation; X-ray; CT scan; data scarcity; image data; neural network; clinical informatics",
-abstract="Background: Research on the diagnosis of COVID-19 using lung images is limited by the scarcity of imaging data. Generative adversarial networks (GANs) are popular for synthesis and data augmentation. GANs have been explored for data augmentation to enhance the performance of artificial intelligence (AI) methods for the diagnosis of COVID-19 within lung computed tomography (CT) and X-ray images. However, the role of GANs in overcoming data scarcity for COVID-19 is not well understood. Objective: This review presents a comprehensive study on the role of GANs in addressing the challenges related to COVID-19 data scarcity and diagnosis. It is the first review that summarizes different GAN methods and lung imaging data sets for COVID-19. It attempts to answer the questions related to applications of GANs, popular GAN architectures, frequently used image modalities, and the availability of source code. Methods: A search was conducted on 5 databases, namely PubMed, IEEEXplore, Association for Computing Machinery (ACM) Digital Library, Scopus, and Google Scholar. The search was conducted from October 11-13, 2021. The search was conducted using intervention keywords, such as ``generative adversarial networks'' and ``GANs,'' and application keywords, such as ``COVID-19'' and ``coronavirus.'' The review was performed following the Preferred Reporting Items for Systematic Reviews and Meta-Analyses Extension for Scoping Reviews (PRISMA-ScR) guidelines for systematic and scoping reviews. Only those studies were included that reported GAN-based methods for analyzing chest X-ray images, chest CT images, and chest ultrasound images. Any studies that used deep learning methods but did not use GANs were excluded. No restrictions were imposed on the country of publication, study design, or outcomes. Only those studies that were in English and were published from 2020 to 2022 were included. No studies before 2020 were included. Results: This review included 57 full-text studies that reported the use of GANs for different applications in COVID-19 lung imaging data. Most of the studies (n=42, 74{\%}) used GANs for data augmentation to enhance the performance of AI techniques for COVID-19 diagnosis. Other popular applications of GANs were segmentation of lungs and superresolution of lung images. The cycleGAN and the conditional GAN were the most commonly used architectures, used in 9 studies each. In addition, 29 (51{\%}) studies used chest X-ray images, while 21 (37{\%}) studies used CT images for the training of GANs. For the majority of the studies (n=47, 82{\%}), the experiments were conducted and results were reported using publicly available data. A secondary evaluation of the results by radiologists/clinicians was reported by only 2 (4{\%}) studies. Conclusions: Studies have shown that GANs have great potential to address the data scarcity challenge for lung images in COVID-19. Data synthesized with GANs have been helpful to improve the training of the convolutional neural network (CNN) models trained for the diagnosis of COVID-19. In addition, GANs have also contributed to enhancing the CNNs' performance through the superresolution of the images and segmentation. This review also identified key limitations of the potential transformation of GAN-based methods in clinical applications. ",
-issn="2291-9694",
-doi="10.2196/37365"
+  author = {Ali, Hazrat and Shah, Zubair},
+  title = {Combating COVID-19 Using Generative Adversarial Networks and Artificial Intelligence for Medical Images: Scoping Review},
+  journal = {JMIR Med Inform},
+  year = {2022},
+  volume = {10},
+  number = {6},
+  pages = {e37365},
+  doi = {10.2196/37365}
+}
+
+@article{padilla2020metrics,
+  author = {Padilla, Rafael and Netto, Sergio L. and da Silva, Eduardo A. B.},
+  title = {A Survey on Performance Metrics for Object-Detection Algorithms},
+  journal = {2020 International Conference on Systems, Signals and Image Processing (IWSSIP)},
+  year = {2020},
+  pages = {237--242},
+  doi = {10.1109/IWSSIP48289.2020.9145130}
+}
+
+@misc{yolo11,
+  title = {YOLOv11: An Overview of the Key Architectural Enhancements},
+  author = {Khanam, Rahima and Hussain, Muhammad},
+  year = {2024},
+  eprint = {2410.17725},
+  archivePrefix = {arXiv},
+  primaryClass = {cs.CV},
+  url = {https://arxiv.org/abs/2410.17725}
+}
+
+@article{albuquerque2025deep,
+  title = {Deep learning-based object detection algorithms in medical imaging: Systematic review},
+  author = {Albuquerque, Carina and Henriques, Roberto and Castelli, Mauro},
+  journal = {Heliyon},
+  year = {2025},
+  volume = {11},
+  number = {1},
+  publisher = {Elsevier}
+}
+
+@article{yang2021artificial,
+  title = {Artificial convolutional neural network in object detection and semantic segmentation for medical imaging analysis},
+  author = {Yang, Ruixin and Yu, Yingyan},
+  journal = {Frontiers in Oncology},
+  year = {2021},
+  volume = {11},
+  pages = {638182},
+  publisher = {Frontiers Media SA}
+}
+
+@article{pan2023ddpm,
+  author = {Pan, Shuailei and others},
+  title = {2D medical image synthesis using transformer-based denoising diffusion probabilistic model},
+  journal = {Physics in Medicine \& Biology},
+  year = {2023},
+  volume = {68},
+  number = {10},
+  pages = {105004},
+  doi = {10.1088/1361-6560/acca5c}
+}
+
+@article{khader2023ddpm3d,
+  author = {Khader, Firas and others},
+  title = {Denoising diffusion probabilistic models for 3D medical image generation},
+  journal = {Scientific Reports},
+  year = {2023},
+  volume = {13},
+  pages = {7303},
+  doi = {10.1038/s41598-023-34341-2}
+}
+
+@article{ellis2022stylegan3d,
+  author = {Ellis, Stephen and others},
+  title = {Evaluation of 3D GANs for lung tissue modelling in pulmonary CT},
+  journal = {Machine Learning for Biomedical Imaging},
+  year = {2022},
+  volume = {1},
+  pages = {1--36},
+  doi = {10.59275/j.melba.2022-9e4b}
+}
+
+@inproceedings{shi2020stylegan,
+  author = {Shi, Hui and Lu, Hui},
+  title = {A Novel Data Augmentation Method Using Style-Based GAN for Robust Pulmonary Nodule Segmentation},
+  booktitle = {Proceedings},
+  year = {2020}
+}
+
+@article{wu2024yolomsrf,
+  author = {Wu, X. and Li, X. and Zhang, Y. and Chen, B.},
+  title = {YOLO-MSRF for lung nodule detection},
+  journal = {Biomedical Signal Processing and Control},
+  year = {2024},
+  volume = {94},
+  pages = {106318},
+  doi = {10.1016/j.bspc.2024.106318}
+}
+
+@article{harsono2022retinanet,
+  author = {Harsono, I. W. and Liawatimena, S. and Cenggoro, T. W.},
+  title = {Lung nodule detection and classification from thorax CT-scan using RetinaNet with transfer learning},
+  journal = {Journal of King Saud University - Computer and Information Sciences},
+  year = {2022},
+  volume = {34},
+  number = {3},
+  pages = {567--577},
+  doi = {10.1016/j.jksuci.2020.08.004}
+}
+
+@article{nguyen2022datacentric,
+  author = {Nguyen, C. C. and Nguyen, L. G. and Tran, G. S.},
+  title = {A data-centric deep learning method for pulmonary nodule detection},
+  journal = {Journal of Computer Science and Cybernetics},
+  year = {2022},
+  volume = {38},
+  number = {3},
+  pages = {229--243},
+  doi = {10.15625/1813-9663/38/3/16477}
+}
+
+@article{wehbe2024yolov8,
+  author = {Wehbe, Ahmad and Dellepiane, Stefano and Minetti, Iacopo},
+  title = {Enhanced Lung Cancer Detection and TNM Staging Using YOLOv8 and TNMClassifier: An Integrated Deep Learning Approach for CT Imaging},
+  journal = {IEEE Access},
+  year = {2024},
+  volume = {12},
+  pages = {141414--141424},
+  doi = {10.1109/ACCESS.2024.3462629}
+}
+
+@inproceedings{ren2015fasterrcnn,
+  author = {Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
+  title = {Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+  year = {2015},
+  pages = {91--99}
+}
+
+@inproceedings{redmon2016yolo,
+  author = {Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
+  title = {You Only Look Once: Unified, Real-Time Object Detection},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year = {2016},
+  pages = {779--788},
+  doi = {10.1109/CVPR.2016.91}
+}
+
+@inproceedings{lin2017focal,
+  author = {Lin, Tsung-Yi and Goyal, Priya and Girshick, Ross and He, Kaiming and Doll{\'a}r, Piotr},
+  title = {Focal Loss for Dense Object Detection},
+  booktitle = {IEEE International Conference on Computer Vision (ICCV)},
+  year = {2017},
+  pages = {2980--2988},
+  doi = {10.1109/ICCV.2017.324}
 }
