--- a/latex/01-introduction.tex
+++ b/latex/01-introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
-Object detection in computed tomography (CT) plays a crucial role in reinforcing diagnostic accuracy and clinical decision-making. In the last few years, deep learning-based object detection frameworks like You Only Look Once (YOLO) have shown solid performance in many imaging tasks because of their efficiency and real-time detection capabilities \cite{yolo11,yoloreview}. However, object detection models, especially in sensitive fields like medical imaging, often face the problem of having too little usable labeled data, or it is very difficult to access such data due to privacy constraints, acquisition costs, and annotation burden. As a result, models trained on small or unbalanced datasets tend to overfit and perform poorly when generalizing to unseen data. \\
-To mitigate data scarcity, Generative Adversarial Networks (GANs) \cite{goodfellow2014gan} have been used to synthesize realistic images for augmentation. Prior studies report notable gains in classification and segmentation when augmenting CT data with GAN-generated images \cite{frid2018gan,sandfort2019data}. In contrast, the benefit in object detection remains uncertain: CycleGAN-based augmentation applied to YOLO for multi-organ CT detection has yielded mixed findings \cite{cycleganeaugmentation}. This motivates an investigation of GAN-based augmentation for pulmonary nodule detection in CT. 
+Object detection in computed tomography (CT) plays a crucial role in reinforcing diagnostic accuracy and clinical decision-making. In the last few years, deep learning-based object detection frameworks like You Only Look Once (YOLO) have shown solid performance in many imaging tasks because of their efficiency and real-time detection capabilities \cite{yolo11,ragab2024yoloreview}. However, object detection models, especially in sensitive fields like medical imaging, often face the problem of having too little usable labeled data, or it is very difficult to access such data due to privacy constraints, acquisition costs, and annotation burden. As a result, models trained on small or unbalanced datasets tend to overfit and perform poorly when generalizing to unseen data. \\
+To mitigate data scarcity, Generative Adversarial Networks (GANs) \cite{goodfellow2014gan} have been used to synthesize realistic images for augmentation. Prior studies report notable gains in classification and segmentation when augmenting CT data with GAN-generated images \cite{frid2018gan,sandfort2019cycleganCT}. In contrast, the benefit in object detection remains uncertain: CycleGAN-based augmentation applied to YOLO for multi-organ CT detection has yielded mixed findings \cite{hammami2020cyclegan}. This motivates an investigation of GAN-based augmentation for pulmonary nodule detection in CT. 
 
 \subsection{Novelty \& Contributions}
 Despite promising results of GAN augmentation in medical classification and segmentation, its effectiveness for CT-based object detection has not been clearly established. This paper provides a controlled, comparative evaluation of CycleGAN-augmented training for YOLO-based nodule detection under limited real training data. Our contributions are:
